# aws_educate_taylor_swift_workshop

./: .gitignore  LICENSE  Readme.md  next.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
amplify/: ReadMe.md  backend.ts
amplify/data/: publish.js  publish.ts  receive.js  receive.ts  resource.ts
amplify/functions/BusinessAnalyzer/: appsyncAutlUtil.ts  graphql.ts  handler.ts  resource.ts
bedrock_deployment/: ReadMe.md  bedrock-flow-template.yaml  flow-definition.json  lambda-template.yaml
deployment/: ReadMe.md  cloudformation.yaml  clouformation.yaml  deploy.sh
example/: example1.txt  example2.txt  example3.txt
src/: client.ts
src/app/: ConfigureAmplify.tsx  globals.css  layout.tsx  page.tsx
src/app/chat/[id]/: Chat.tsx  page.tsx
src/components/: BusinessAnalysisCard.tsx  Layout.tsx  ReportModal.tsx  ThemeToggle.tsx
src/components/Sidebar/: ConversationItem.tsx  CreateChat.tsx  Logout.tsx  Sidebar.tsx
src/dataset/: Taylor_Train_cleaned.csv
src/generate_report/: instuction.txt  lambda_function.py  requirements.txt
src/give_suggestion/: lambda_function.py  requirements.txt
src/prompt/: llm_instruction.txt  llm_instuction.txt
src/providers/: ConversationsProvider.tsx
src/theme/: index.ts
src/utils/: data_preprocessing.py
