[tool.poetry]
name = "aws-educate-taylor-swift-workshop"
version = "0.1.0"
description = ""
authors = ["Rich627 <rich.liu0912@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
boto3 = "^1.37.7"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
